# poc-whisper

./: LICENSE  README.md
.github/workflows/: docker.yml  main.yml
deploy/kubernetes/: api-deployment.yaml  api-service.yaml  hpas.yaml  ia-worker-deployment.yaml  ia-worker-service.yaml  namespace.yaml  redis-deployment.yaml  slimfaas-deployment.yaml  slimfaas-ingress.yaml  webapp-deployment.yaml  webapp-ingress.yaml  webapp-service.yaml
deploy/terraform/: main.tf  provider.tf  variables.tf
documentation/: Architecture.pptx
production/: docker-compose.yaml
production/api/: Dockerfile  main.py  pyproject.toml
production/api/app/: app_settings.py  http_service.py  main.py  redis.py  redis_client.py  settings.development.json  settings.json  settings.production.json
production/api/app/oidc/: authentication.py  authentication_middleware.py
production/ia-worker/: Dockerfile  pyproject.toml
production/ia-worker/app/: app_settings.py  http_service.py  main.py  redis.py  redis_client.py  settings.development.json  settings.production.json
production/webapp/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
production/webapp/src/: App.jsx  AudioRecorder.js  AudioRecorderComponent.jsx  BaseUrlContext.js  EnvironmentStarter.jsx  SlimFaasPlanetSaver.js
