[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Guillaume Chervet <guillaume.chervet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
starlette = "^0.41.0"
python-multipart = "^0.0.12"
redis = "^5.2.0"
httpx = "^0.27.2"
msgpack = "^1.1.0"
jwskate = "^0.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
